welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: not found: value x
  for (i<- 0 to (x-2)){
                 ^Array1:22: error: not found: value x
  recule(x-1)
         ^Array1:27: error: not found: value x
  for (i<-0 to (x-2)){
                ^Array1:33: error: not found: value x
  setCouleurBrosse(t(x-1));
                     ^Array1:36: error: not found: value x
  recule(x-1)
         ^