welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var tab = new Array[Color](6);
  var x = getMondeHauteur()
  for (i<-1 to (x-1)){
 	  remplirTableau(tab);
  	seReplacer();
  	colorier(tab)
  }
  avance(x-1);
}

def remplirTableau(t:Array[Color]){
  for (i<- 0 to (x-2)){
    t(i+1)=getCouleurSol();
    avance();
  }
  t(0)=getCouleurSol();
}

def seReplacer(){
  recule(x-1)
  gauche();avance();droite();
}

def colorier(t:Array[Color]){
  for (i<-0 to (x-2)){
  	setCouleurBrosse(t(i));
    baisseBrosse();
    leveBrosse();
    avance();
  }
  setCouleurBrosse(t(x-1));
  baisseBrosse();
  leveBrosse();
  recule(x-1)
}

